# Final_Project

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/hthieu/final_project/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: constant.cpp  constant.h  image.cpp  image.h  key.cpp  key.h  native-lib.cpp  octave.cpp  octave.h  sift.cpp  sift.h  sift_main.cpp
app/src/main/java/com/example/hthieu/final_project/: Main2Activity.java  Main3Activity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/hthieu/final_project/: ExampleUnitTest.java
